# farm_stack

./: README.md
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py
